# rs-rdc

./: Cargo.toml  LICENSE.md  README.md
src/: codegen.rs  errors.rs  ir.rs  lib.rs
src/ir/: data.rs  types.rs
src/targets/: java.rs
src/targets/java/: cg_data_enum.rs  cg_enum.rs  cg_struct.rs  cg_utils.rs  tests.rs  type_resolver.rs
src/targets/java/cg_data_enum/: external.rs
src/targets/java/tests/: project_builder.rs
