[package]
name = "rdc"
version = "0.1.0"
edition = "2021"
authors = ["Szymon Dziwak"]
description = "Library for generating Java code from rust structs"
license = "MIT"

[dependencies]
rdc-macros = "0.1.0"
genco = "0.17.3"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[features]
default = []
